# photolayer_pi

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.md  PhotoLayer.fbp  Plugin.cmake  README  README.md  WeatherFax.fbp  appveyor.yml  config.h.in  photolayer-plugin.xml.in  update-templates
libs/libgeotiff/: .gitignore  CMakeLists.txt  GeoTiff-msvc.cmake  LibGeotiff.cmake  Proj.cmake  Tiff-msvc.cmake  Tiff.cmake
libs/libgeotiff/cmake/: FindGeoTIFF.cmake
libs/libgeotiff/libgeotiff-1.4.2/: geotiff.lib
libs/libgeotiff/libgeotiff-1.6.0/: Makefile  Makefile.in  config.status  configure  cpl_serv.lo  geo_config.h  geo_config.h.in  geo_extra.lo  geo_free.lo  geo_get.lo  geo_names.lo  geo_new.lo  geo_normalize.lo  geo_print.lo  geo_set.lo  geo_simpletags.lo  geo_strtod.lo  geo_tiffp.lo  geo_trans.lo  geo_write.lo  geotiff_proj4.lo  libgeotiff.la  libtool
libs/libgeotiff/libgeotiff-1.6.0/.deps/: cpl_serv.Plo  geo_extra.Plo  geo_free.Plo  geo_get.Plo  geo_names.Plo  geo_new.Plo  geo_normalize.Plo  geo_print.Plo  geo_set.Plo  geo_simpletags.Plo  geo_strtod.Plo  geo_tiffp.Plo  geo_trans.Plo  geo_write.Plo  geotiff_proj4.Plo
libs/libgeotiff/libgeotiff-1.6.0/.libs/: libgeotiff.la  libgeotiff.lai
libs/libgeotiff/libgeotiff-1.6.0/autom4te.cache/: output.0  requests  traces.0  traces.1
libs/libgeotiff/libgeotiff-1.6.0/cmake/: Makefile  Makefile.in
libs/libgeotiff/libgeotiff-1.6.0/libxtiff/: Makefile  Makefile.in  libxtiff.la  xtiff.lo
libs/libgeotiff/libgeotiff-1.6.0/libxtiff/.deps/: xtiff.Plo
libs/libgeotiff/libgeotiff-1.6.0/libxtiff/.libs/: libxtiff.la
libs/libgeotiff/libgeotiff-1.6.0/man/: Makefile  Makefile.in
libs/libgeotiff/libgeotiff-1.6.0/man/man1/: Makefile  Makefile.in
libs/libgeotiff/libgeotiff-1.6.0/test/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool  proj.pc
libs/libgeotiff/proj-7.2.1/autom4te.cache/: output.0  requests  traces.0  traces.1
libs/libgeotiff/proj-7.2.1/cmake/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/data/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/include/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/include/proj/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/include/proj/internal/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/man/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/man/man1/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/src/: 4D_api.lo  Makefile  Makefile.in  aasincos.lo  adjlon.lo  auth.lo  cct  cs2cs  ctx.lo  datum_set.lo  datums.lo  deriv.lo  dmstor.lo  ell_set.lo  ellps.lo  factors.lo  fileapi.lo  filemanager.lo  fwd.lo  generic_inverse.lo  geod  geodesic.lo  gie  grids.lo  initcache.lo  internal.lo  libproj.la  mlfn.lo  msfn.lo  mutex.lo  networkfilemanager.lo  param.lo  phi2.lo  pipeline.lo  pr_list.lo  proj  proj_config.h  proj_json_streaming_writer.lo  proj_mdist.lo  projinfo  (+17 more)
libs/libgeotiff/proj-7.2.1/src/.deps/: 4D_api.Plo  aasincos.Plo  adjlon.Plo  auth.Plo  ctx.Plo  datum_set.Plo  datums.Plo  deriv.Plo  dmstor.Plo  ell_set.Plo  ellps.Plo  errno.Plo  factors.Plo  fileapi.Plo  filemanager.Plo  fwd.Plo  gauss.Plo  generic_inverse.Plo  geodesic.Plo  grids.Plo  init.Plo  initcache.Plo  internal.Plo  inv.Plo  list.Plo  log.Plo  malloc.Plo  mlfn.Plo  msfn.Plo  mutex.Plo  networkfilemanager.Plo  param.Plo  phi2.Plo  pipeline.Plo  pr_list.Plo  proj_json_streaming_writer.Plo  proj_mdist.Plo  qsfn.Plo  release.Plo  rtodms.Plo  (+14 more)
libs/libgeotiff/proj-7.2.1/src/.libs/: cct  cs2cs  geod  gie  libproj.dylib  libproj.la  libproj.lai  proj  projinfo  projsync
libs/libgeotiff/proj-7.2.1/src/apps/.deps/: cct.Po  cs2cs.Po  emess.Po  geod.Po  geod_interface.Po  geod_set.Po  gie.Po  proj.Po  proj_strtod.Po  projinfo.Po  projsync.Po  utils.Po
libs/libgeotiff/proj-7.2.1/src/conversions/: axisswap.lo  cart.lo  geoc.lo  geocent.lo  noop.lo  set.lo  unitconvert.lo
libs/libgeotiff/proj-7.2.1/src/conversions/.deps/: axisswap.Plo  cart.Plo  geoc.Plo  geocent.Plo  noop.Plo  set.Plo  unitconvert.Plo
libs/libgeotiff/proj-7.2.1/src/iso19111/: c_api.lo  common.lo  coordinatesystem.lo  crs.lo  datum.lo  factory.lo  internal.lo  io.lo  metadata.lo  static.lo  util.lo
libs/libgeotiff/proj-7.2.1/src/iso19111/.deps/: c_api.Plo  common.Plo  coordinatesystem.Plo  crs.Plo  datum.Plo  factory.Plo  internal.Plo  io.Plo  metadata.Plo  static.Plo  util.Plo
libs/libgeotiff/proj-7.2.1/src/iso19111/operation/: concatenatedoperation.lo  conversion.lo  coordinateoperationfactory.lo  esriparammappings.lo  oputils.lo  parammappings.lo  projbasedoperation.lo  singleoperation.lo  transformation.lo  vectorofvaluesparams.lo
libs/libgeotiff/proj-7.2.1/src/projections/: adams.lo  aea.lo  aeqd.lo  airy.lo  aitoff.lo  august.lo  bacon.lo  bertin1953.lo  bipc.lo  boggs.lo  bonne.lo  calcofi.lo  cass.lo  cc.lo  ccon.lo  cea.lo  chamb.lo  col_urban.lo  collg.lo  comill.lo  crast.lo  denoy.lo  eck1.lo  eck2.lo  eck3.lo  eck4.lo  eck5.lo  eqc.lo  eqdc.lo  eqearth.lo  fahey.lo  fouc_s.lo  gall.lo  geos.lo  gins8.lo  gn_sinu.lo  gnom.lo  goode.lo  gstmerc.lo  hammer.lo  (+70 more)
libs/libgeotiff/proj-7.2.1/src/projections/.deps/: adams.Plo  aea.Plo  aeqd.Plo  airy.Plo  aitoff.Plo  august.Plo  bacon.Plo  bertin1953.Plo  bipc.Plo  boggs.Plo  bonne.Plo  calcofi.Plo  cass.Plo  cc.Plo  ccon.Plo  cea.Plo  chamb.Plo  col_urban.Plo  collg.Plo  comill.Plo  crast.Plo  denoy.Plo  eck1.Plo  eck2.Plo  eck3.Plo  eck4.Plo  eck5.Plo  (+83 more)
libs/libgeotiff/proj-7.2.1/src/transformations/: affine.lo  defmodel.lo  deformation.lo  helmert.lo  hgridshift.lo  horner.lo  molodensky.lo  tinshift.lo  vgridshift.lo  xyzgridshift.lo
libs/libgeotiff/proj-7.2.1/test/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/test/cli/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/test/gie/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/test/gigs/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/test/googletest/: Makefile  Makefile.in
libs/libgeotiff/proj-7.2.1/test/unit/: Makefile  Makefile.in
libs/libtiff/: CMakeLists.txt
libs/libtiff/tiff-msvc-4.0.10/: libtiff.lib
(+142 files in other folders)
